--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.example.stores'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.stores"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -37,9 +37,10 @@ android {
 }
 
 def room_version = "2.4.3"
+def anko_version="0.10.8"
+
 dependencies {
-    implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor("androidx.room:room-compiler:$room_version")
+    implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
