--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,14 @@
                 android:value="" />
         </activity>
     </application>
-
+<queries>
+    <intent>
+        <action android:name="android.intent.action.DIAL"/>
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="https"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+    </intent>
+</queries>
 </manifest>
